fix task 2